Fixed spacing issues on book img

--- a/src/index.css
+++ b/src/index.css
@@ -98,7 +98,9 @@ li{
     display: flex;   
     align-self: flex-start;
     justify-content: center;
-    
+    height: 100vh;
+    width: 8vw;
+    align-items: center;
 }
 
 .book-img{
@@ -117,13 +119,14 @@ li{
 }
 
 .book-info{
-    margin-top: -130px;
+    margin-top: -200px;
     margin-left: 70px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-left:1rem;
-    
+    justify-content: center;
+    max-width: 50%;
+    height:100vh;
 }
 
 .title-link{
@@ -143,6 +146,7 @@ li{
     margin: 0;
     font-size: 1rem;
     padding-bottom: 5px;
+    
 }
 
 .rating{
@@ -265,24 +269,20 @@ button{
     }
 }
 
-@media (max-width: 450px){
-    li{
-        padding: 0 1.1rem;
-    }
-}
 
-@media (max-width: 410px){
-    li{
-        padding: 0 1.8rem;
-    }
-}
 
 @media(min-width: 1450px){
     li{
         width:20%;
     }
 
-    .book-info{
-        margin-right:35px;
+    .book-img-container{
+        margin-left: -20px;
+    }
+}
+
+@media(min-width: 1700px){
+    .book-img-container{
+        margin-left: -35px;
     }
 }
